# adk-samples

./: .gitignore  commit_message.txt  conftest.py  run_mvp_sequential_test.py  valuable_fixes.patch  项目进展V2.md
agents/: __init__.py
agents/compose/: pyproject.toml
agents/composer-agent/: pyproject.toml
agents/composer-agent/composer_service/: utils.py
agents/composer-agent/composer_service/agents/: draft_writer.py  scorer.py
agents/composer-agent/composer_service/composer_service.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
agents/composer-agent/composer_service/llm/: client.py
agents/composer-agent/composer_service/tests/: lib.py  test_check_initial_data.py  test_check_progress.py  test_draft_writer.py  test_draft_writer_integration.py  test_integration_workflow.py  test_llm_client.py  test_llm_client_integration.py  test_save_draft_result.py  test_save_score.py  test_scorer.py  test_scorer_integration.py  test_state_manager.py  test_state_manager_real.py  test_workflow.py
agents/composer-agent/composer_service/tools/: __init__.py  check_initial_data.py  check_progress.py  get_final_draft.py  save_draft_result.py  save_score.py  state_manager.py
agents/composer-agent/composer_service/workflow/: __init__.py  agents_registry.py
agents/composer-agent/tests/: test_imports.py
agents/sequential_orchestrator_flat/: __init__.py  pyproject.toml
agents/sequential_orchestrator_flat/sequential_orchestrator_flat/: __init__.py  agent.py  prompt.py
agents/sequential_orchestrator_flat/sequential_orchestrator_flat/tests/: run_flat_test.py  test_llm_tools.py
(+84 files in other folders)
